--- a/S01/SLU12 - Support Vector Machines/Exercise notebook.ipynb
+++ b/S01/SLU12 - Support Vector Machines/Exercise notebook.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -107,7 +107,132 @@
     },
     "outputId": "29caa707-c737-4f16-eae7-1b9b17a8ff33"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(13232, 9)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>room_id</th>\n",
+       "      <th>host_id</th>\n",
+       "      <th>room_type</th>\n",
+       "      <th>neighborhood</th>\n",
+       "      <th>reviews</th>\n",
+       "      <th>overall_satisfaction</th>\n",
+       "      <th>accommodates</th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12148</th>\n",
+       "      <td>18430120</td>\n",
+       "      <td>123079348</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>Lumiar</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>95.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8355</th>\n",
+       "      <td>14035445</td>\n",
+       "      <td>84062304</td>\n",
+       "      <td>Private room</td>\n",
+       "      <td>Parque das Nações</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>39.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9040</th>\n",
+       "      <td>14895450</td>\n",
+       "      <td>69237427</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>São Vicente</td>\n",
+       "      <td>20</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>87.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>124558</td>\n",
+       "      <td>620702</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>Santa Maria Maior</td>\n",
+       "      <td>126</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>75.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9311</th>\n",
+       "      <td>15269760</td>\n",
+       "      <td>40814166</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>Belém</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>52.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        room_id    host_id        room_type       neighborhood  reviews  \\\n",
+       "12148  18430120  123079348  Entire home/apt             Lumiar        0   \n",
+       "8355   14035445   84062304     Private room  Parque das Nações        7   \n",
+       "9040   14895450   69237427  Entire home/apt        São Vicente       20   \n",
+       "63       124558     620702  Entire home/apt  Santa Maria Maior      126   \n",
+       "9311   15269760   40814166  Entire home/apt              Belém        1   \n",
+       "\n",
+       "       overall_satisfaction  accommodates  bedrooms  price  \n",
+       "12148                   0.0             4       2.0   95.0  \n",
+       "8355                    4.5             2       1.0   39.0  \n",
+       "9040                    5.0             5       3.0   87.0  \n",
+       "63                      4.5             6       2.0   75.0  \n",
+       "9311                    0.0             4       1.0   52.0  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "airbnb_df = pd.read_csv(\"data/airbnb.csv\")\n",
     "print(airbnb_df.shape)\n",
@@ -135,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -177,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -196,7 +321,20 @@
     },
     "outputId": "38ea7a86-4f01-4a13-847f-eb0f7f84e269"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False    7073\n",
+       "True     6159\n",
+       "Name: price_target, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "airbnb_df[\"price_target\"] = airbnb_df.price < 64\n",
     "airbnb_df.price_target.value_counts()"
@@ -225,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -244,7 +382,18 @@
     },
     "outputId": "77e4a3a7-cb07-4bfd-cf03-8edd23a1fa43"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train of shape  (10585, 31)\n",
+      "y_train of shape  (10585,)\n",
+      "X_test of shape   (2647, 31)\n",
+      "y_test of shape   (2647,)\n"
+     ]
+    }
+   ],
    "source": [
     "# Create the features matrix X and target vector y\n",
     "X = airbnb_df.drop([col for col in airbnb_df.columns if \"price\" in col], axis=1)\n",
@@ -287,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -305,20 +454,37 @@
     },
     "outputId": "528b3417-3213-462c-de16-1d870d9ddb4e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "    decision_function_shape='ovr', degree=3, gamma='auto_deprecated',\n",
+       "    kernel='linear', max_iter=-1, probability=False, random_state=None,\n",
+       "    shrinking=True, tol=0.001, verbose=False)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create an SVC estimator using sklearn with a linear kernel \n",
     "# train it on the data \n",
-    "# assign your trained estimator to linear_svc\n",
-    "# linear_svc = ...\n",
+    "from sklearn.svm import SVC\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# assign your trained estimator to linear_svc\n",
+    "linear_svc = SVC(kernel=\"linear\")\n",
+    "linear_svc.fit(X_train, y_train)\n",
+    "\n",
+    "\n",
+    "# YOUR CODE HERE\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -364,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -386,15 +552,14 @@
    "source": [
     "# Obtain the support vectors for the classifier defined in 1.1\n",
     "# assign the result to a variable s_vectors\n",
-    "# s_vectors = ...\n",
+    "s_vectors = linear_svc.support_vectors_\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# YOUR CODE HERE\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -437,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -461,15 +626,14 @@
     "# assign the result to n_s_vectors, which should be an array whose first element\n",
     "# is the number of support vectors of class 1 and the second element the number\n",
     "# of support vectors of class 2\n",
-    "# n_s_vectors = ...\n",
+    "n_s_vectors = linear_svc.n_support_\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# YOUR CODE HERE\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -592,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -610,21 +774,35 @@
     },
     "outputId": "c530dab8-4c09-47d9-dea2-914a416b87a3"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "    decision_function_shape='ovr', degree=3, gamma='auto_deprecated',\n",
+       "    kernel='rbf', max_iter=-1, probability=False, random_state=None,\n",
+       "    shrinking=True, tol=0.001, verbose=False)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Use an SVM with a radial kernel to create predictions\n",
     "# Being by creating the estimator\n",
     "# then train it on the data\n",
     "# assign your estimator to the variable radial_svm\n",
-    "# radial_svm = ...\n",
+    "radial_svm = SVC(kernel=\"rbf\")\n",
+    "radial_svm.fit(X_train, y_train)\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# YOUR CODE HERE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -670,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -692,15 +870,14 @@
    "source": [
     "# Use your SVM with radial kernel to create predictions on the test set\n",
     "# assign your predictions to the variable radial_preds\n",
-    "# radial_preds = ...\n",
+    "radial_preds = radial_svm.predict(X_test)\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# YOUR CODE HERE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -744,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -769,16 +946,17 @@
     "# then train it on the data\n",
     "# assign your estimator to the variable poly_svm\n",
     "# and its predictions to the variable poly_preds\n",
-    "# poly_svm = ...\n",
-    "# poly_preds = ...\n",
+    "poly_svm = SVC(kernel=\"poly\", degree=2)\n",
+    "poly_svm.fit(X_train, y_train)\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "poly_preds = poly_svm.predict(X_test)\n",
+    "\n",
+    "# YOUR CODE HEre"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -829,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -852,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -870,21 +1048,36 @@
     },
     "outputId": "b7286a2b-fcd9-498a-d805-7f6d5b77311c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVR(C=1.0, cache_size=200, coef0=0.0, degree=3, epsilon=0.1,\n",
+       "    gamma='auto_deprecated', kernel='rbf', max_iter=-1, shrinking=True,\n",
+       "    tol=0.001, verbose=False)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Use an SVR with a radial kernel to create predictions\n",
     "# Begin by creating the estimator\n",
     "# then train it on the data\n",
     "# assign your estimator to the variable svr\n",
-    "# svr = ...\n",
+    "from sklearn.svm import SVR\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n"
+    "svr = SVR()\n",
+    "svr.fit(X_train, y_train)\n",
+    "\n",
+    "# YOUR CODE HERE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -908,6 +1101,13 @@
     "assert svr_parameters_hash == sha256(json.dumps(svr.get_params()).encode()).hexdigest()\n",
     "np.testing.assert_almost_equal(svr.score(X_test, y_test), 0.08202727591603864)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -933,7 +1133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
