--- a/S01/SLU14 - k-Nearest Neighbors/Exercise notebook.ipynb
+++ b/S01/SLU14 - k-Nearest Neighbors/Exercise notebook.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -125,12 +125,17 @@
     "    \"\"\"\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    if a.shape != b.shape:\n",
+    "        return None\n",
+    "    else:\n",
+    "        distance=np.sqrt(np.sum((a-b)**2, axis=0))\n",
+    "        \n",
+    "        return distance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -207,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -237,12 +242,14 @@
     "    \"\"\"\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    dot_prod= sum(x*y for x,y in zip(a,b))\n",
+    "    \n",
+    "    return dot_prod"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -308,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -338,12 +345,18 @@
     "    \"\"\"\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    origin=a.copy()\n",
+    "    origin[:]=0\n",
+    "    norm_a=euclidean_distance(a,origin)\n",
+    "    norm_b=euclidean_distance(b, origin)\n",
+    "    cos=dot_product(a,b)/(norm_a*norm_b)\n",
+    "    cos_dist=1-cos\n",
+    "    return cos_dist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -445,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -475,14 +488,23 @@
     "    ----------\n",
     "    distances: numpy array with shape (N,)\n",
     "    \"\"\"\n",
-    "\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    distances=[]\n",
+    "    for each in dataset:\n",
+    "        if distance_type == 'euclidean':\n",
+    "            distances.append(euclidean_distance(x, each))\n",
+    "            \n",
+    "        elif distance_type == 'cosine':\n",
+    "            distances.append(cosine_distance(x,each))\n",
+    "        \n",
+    "        elif distance_type == 'dot':\n",
+    "            distances.append(dot_product(x, each))\n",
+    "    distances=np.asarray(distances)\n",
+    "    return distances\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -559,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -589,12 +611,18 @@
     "    \"\"\"\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    distances.sort()\n",
+    "    indexes = []\n",
+    "    for x in range(k):\n",
+    "        indexes.append(distances[x])\n",
+    "    indexes=np.asarray(indexes)\n",
+    "    return indexes\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -607,7 +635,19 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-60-55178b6fd8e8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mknn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mselect_nearest_neighbours\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrand\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m150\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32massert\u001b[0m \u001b[0mknn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msha256\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbytes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mknn\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'01d448afd928065458cf670b60f5a594d735af0172c8d67f22a81680132681ca'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;31m# Test case 2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# This is to make the random predictable\n",
     "np.random.seed(42)\n",
@@ -652,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -682,12 +722,16 @@
     "    \"\"\"\n",
     "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    labels=[]\n",
+    "    for each in neighbour_indexes:\n",
+    "        labels.append(y_train[each])\n",
+    "    labels=np.asarray(labels)\n",
+    "    return labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -742,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -753,7 +797,16 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-73-a164fda67acb>, line 16)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-73-a164fda67acb>\"\u001b[1;36m, line \u001b[1;32m16\u001b[0m\n\u001b[1;33m    dicts = {}\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "# implement a function called predict_label_majority\n",
     "\n",
@@ -768,15 +821,16 @@
     "    Returns\n",
     "    ----------\n",
     "    label: int\n",
-    "    \"\"\"\n",
+    "        \"\"\"\n",
+    "    from statistics import mode \n",
     "\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    label= mode(nn_labels)\n",
+    "    return label"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -789,7 +843,19 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-74-2cd3d2dc2e8f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# Test case 1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0manswer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpredict_label_majority\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0manswer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;32massert\u001b[0m \u001b[0mhashlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msha256\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbytes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0manswer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhexdigest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'96a296d224f285c67bee93c30f8a309157f0daa35dc5b87e410b78630a09cfc7'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(42) \n",
     "\n",
@@ -1220,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1247,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1265,15 +1331,14 @@
     "\n",
     "# Now do a train test split, using the train_test_split function from scikit\n",
     "# Use a test_size of 0.33 and a random_state of 42\n",
-    "# X_train, X_test, y_train, y_test = ...\n",
+    "X_train, X_test, y_train, y_test = train_test_split(data.data, data.target, test_size=0.33, random_state=42)\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# YOUR CODE HERE\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1320,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1336,25 +1401,25 @@
     "# Now instantiate a kNN Classifier with k=3, that uses the euclidean distance as distance function\n",
     "# In scikit, the euclidean distance is the default one and goes by the name of 'minkowski'\n",
     "# which is in fact a generalisation of the euclidean distance\n",
-    "# clf = ...\n",
+    "clf = KNeighborsClassifier(n_neighbors=3)\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "clf.fit(X_train, y_train)\n",
+    "y_pred = clf.predict(X_test)\n",
+    "accuracy= accuracy_score(y_test, y_pred)\n",
     "\n",
     "\n",
     "# Get predictions for the test dataset\n",
     "# y_pred = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
     "\n",
     "# Measure the accuracy of your solution using scikit's accuracy_score function\n",
     "# accuracy = ...\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# YOUR CODE HERE\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1403,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1419,23 +1484,24 @@
     "# Instantiate a kNN Classifier with k=3, that uses the cosine distance as distance function\n",
     "# clf = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "clf = KNeighborsClassifier(n_neighbors=3, metric=cosine)\n",
     "\n",
+    "clf.fit(X_train, y_train)\n",
+    "y_pred = clf.predict(X_test)\n",
+    "accuracy= accuracy_score(y_test, y_pred)\n",
     "\n",
     "# Get predictions for the test dataset\n",
     "# y_pred = ...\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
     "\n",
     "# Measure the accuracy of your solution using scikit's accuracy_score function\n",
     "# accuracy = ...\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# YOUR CODE HERE\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1494,20 +1560,6 @@
    "source": [
     "![were_done](media/were_done.gif)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
