--- a/S01/SLU07 - Regression with Linear Regression/Exercise notebook.ipynb
+++ b/S01/SLU07 - Regression with Linear Regression/Exercise notebook.ipynb
@@ -2116,7 +2116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 114,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2142,36 +2142,20 @@
     "        betas : numpy.array with shape (num_features + 1,) - final weights after algorithm\n",
     "            \n",
     "    \"\"\"    \n",
-    "\n",
-    "    for epoch in range(epochs): \n",
-    "      \n",
-    "        y_hat = simple_linear_model(x, betas)\n",
-    "        deltas = np.zeros((x.shape[1] + 1, 1))\n",
-    "        deltas[0] = linear_regression_partial_derivatives(y, y_hat)\n",
-    "        \n",
-    "        for col in range(x.shape[1]): \n",
-    "            deltas[col+1] = linear_regression_partial_derivatives(y, y_hat, x[:, col])\n",
-    "        \n",
-    "        # We add this to avoid increasingly bigger derivatives\n",
-    "        if clip == True:\n",
-    "            deltas = np.clip(deltas, -1, 1)\n",
-    "            \n",
-    "        betas_ = betas_ - learning_rate * deltas\n",
-    "\n",
-    "        \n",
+    "    for epoch in range(epochs):       \n",
     "        \n",
     "        # Compute estimates for this iteration \n",
-    "        # y_hat = ...\n",
+    "        y_hat = extended_linear_model(x, betas)\n",
     "        # YOUR CODE HERE\n",
-    "\n",
     "        # Compute the partial derivatives of the error function \n",
     "        # (hint: check linear_regression_partial_derivatives)\n",
-    "        # deltas = ...\n",
+    "        deltas = linear_regression_partial_derivatives(x, y, y_hat)\n",
     "        # YOUR CODE HERE\n",
     "\n",
     "        # Update betas with Gradient Descent rule \n",
-    "        # betas = ...\n",
-    "        # YOUR CODE HERE\n",
+    "        betas = betas - learning_rate * deltas\n",
+    "        \n",
+    "     # YOUR CODE HERE\n",
     "    \n",
     "    return betas"
    ]
@@ -2195,7 +2179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 115,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2210,15 +2194,20 @@
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "linear_regression_partial_derivatives() missing 1 required positional argument: 'y_hat'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-94-751a638458cd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mepochs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mbetas_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlinear_regression_gradient_descent\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_housing\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_housing\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbetas\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m np.testing.assert_array_almost_equal(\n\u001b[0;32m      8\u001b[0m     \u001b[0mbetas_\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-93-d329dfce6601>\u001b[0m in \u001b[0;36mlinear_regression_gradient_descent\u001b[1;34m(x, y, betas, learning_rate, epochs)\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[0my_hat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msimple_linear_model\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbetas\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m         \u001b[0mdeltas\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m         \u001b[0mdeltas\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlinear_regression_partial_derivatives\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_hat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mcol\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: linear_regression_partial_derivatives() missing 1 required positional argument: 'y_hat'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n"
      ]
     }
    ],
@@ -2269,9 +2258,239 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "(506,) (506,)\n",
+      "Feature coefficients: \n",
+      "              SGD       OLS\n",
+      "CRIM    -0.910210 -0.920411\n",
+      "ZN       1.063046  1.080981\n",
+      "INDUS    0.088910  0.142967\n",
+      "CHAS     0.689895  0.682203\n",
+      "NOX     -2.047994 -2.060092\n",
+      "RM       2.681020  2.670641\n",
+      "AGE      0.012482  0.021121\n",
+      "DIS     -3.106294 -3.104448\n",
+      "RAD      2.522216  2.658787\n",
+      "TAX     -1.921710 -2.075898\n",
+      "PTRATIO -2.056564 -2.062156\n",
+      "B        0.855731  0.856640\n",
+      "LSTAT   -3.743365 -3.748680\n",
+      "\n",
+      "\n",
+      "Intercept SGD: 22.532806324110677\n",
+      "\n",
+      "\n",
+      "Intercept OLS: 22.532806324110684\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(42)\n",
     "betas = np.random.rand(x_housing.shape[1] + 1)\n",
@@ -2296,6 +2515,13 @@
     "print('Intercept OLS: {}'.format(intercept_housing))\n",
     "print('\\n')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
