--- a/S01/SLU15 - Feature Engineering/Exercise notebook.ipynb
+++ b/S01/SLU15 - Feature Engineering/Exercise notebook.ipynb
@@ -203,16 +203,18 @@
     "    X_s = X.copy()\n",
     "    \n",
     "    ## convert nominal feature to dtype 'category'\n",
-    "    # ...\n",
-    "    ## create list of ordered categories for ordinal feature\n",
-    "    # ordered_cats = ...\n",
-    "    ## convert ordinal feature to dtype 'category'\n",
-    "    # ...\n",
-    "    ## Assign natural order to ordinal feature\n",
-    "    # ...\n",
+    "    X_s= X_s.assign(type=X['type'].astype('category'))\n",
     "    \n",
+    "    ## create list of ordered categories for ordinal feature\n",
+    "    ordered_cats = ['low', 'medium', 'high']\n",
+    "    \n",
+    "    ## convert ordinal feature to dtype 'category'\n",
+    "    X_s= X_s.assign(risk=X['risk'].astype('category'))\n",
+    "    \n",
+    "    ## Assign natural order to ordinal feature\n",
+    "    X_s= X_s.assign(risk=X_s['risk'].cat.set_categories(ordered_cats, ordered=True))\n",
+    "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
     "\n",
     "    return X_s"
    ]
@@ -318,14 +320,26 @@
     "    y_e = y.copy()\n",
     "    \n",
     "    ## create a dictionary mapping the current values to int values\n",
+    "    \n",
+    "    y_e= list(map(int, y_e))\n",
     "    # enconding_map = ...\n",
     "    ## change target using the mapping\n",
     "    # y_e = ...\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "\n",
+    "    y_e.assign(isFraud = y_e['isFraud'].map({True: 1, False: 0}).sample(5)\n",
     "    \n",
     "    return y_e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encode_target(y)"
    ]
   },
   {
